# ssft

./: Cargo.toml
src/: main.rs  model.rs  tui.rs  util.rs
src/providers/: claude_code.rs  codex.rs  crush.rs  mod.rs
